--- a/Assignment_02/super-simple-php-website.conf
+++ b/Assignment_02/super-simple-php-website.conf
@@ -20,34 +20,37 @@ server {
     	return 301 /;
     }
 
-# nginx caching
-location ~ \.php$ {
-    include snippets/fastcgi-php.conf;
-    #fastcgi_pass unix:/run/php/php-fpm.sock;
-    fastcgi_pass 127.0.0.1:9000;
-
-    fastcgi_cache PHP_CACHE;
-    fastcgi_cache_valid 200 60m;
-    fastcgi_cache_methods GET HEAD;
-
-    add_header X-FastCGI-Cache $upstream_cache_status;
-    fastcgi_ignore_headers Cache-Control Expires Set-Cookie;
-
-    fastcgi_no_cache 0;
-    fastcgi_cache_bypass 0;
-
-    }
 #---------------------------------------------------------------
     location ~ /\.ht {
        deny all;    
     }
 #-----------------------------------------------------------------
+
+  # nginx caching
+    location ~ \.php$ {
+ 	include snippets/fastcgi-php.conf;
+    	#fastcgi_pass unix:/run/php/php-fpm.sock;
+    	fastcgi_pass 127.0.0.1:9000;
+
+    	fastcgi_cache PHP_CACHE;
+    	fastcgi_cache_valid 200 60m;
+    	fastcgi_cache_methods GET HEAD;
+
+    	add_header X-FastCGI-Cache $upstream_cache_status;
+    	fastcgi_ignore_headers Cache-Control Expires Set-Cookie;
+
+    	fastcgi_no_cache 0;
+    	fastcgi_cache_bypass 0;
+    }
+
     # Browser caching
     location ~* \.(css|js|jpg|jpeg|png|gif|ico|svg|webp|woff2|ttf)$ {
         expires 30d; # 300s, 60m, 24h, 6M, 1y, 1h 30m, off, max, ...etc
         add_header Cache-Control "public, no-transform";
     }   
-    
+#-------------------------------------------------------------------------
+    # logs 
     access_log /var/log/nginx/sites/super-simple-php-website/access.log;
     error_log  /var/log/nginx/sites/super-simple-php-website/error.log notice;
 }
+
