--- a/Assignment_02/super-simple-php-website.conf
+++ b/Assignment_02/super-simple-php-website.conf
@@ -16,11 +16,11 @@ server {
    }
 #---------------------------------------------------------------
     location /home {
-     #  rewrite ^/home/?$ / last;
     	return 301 /;
     }
 
 #---------------------------------------------------------------
+    # # deny access to any .ht file
     location ~ /\.ht {
        deny all;    
     }
