--- a/Assignment_09/ways-to-install-docker/install-docker-from-apt/inventory.ini
+++ b/Assignment_09/ways-to-install-docker/install-docker-from-apt/inventory.ini
@@ -1,3 +1,6 @@
 [aws]
-docker-from-apt ansible_user=admin ansible_host=16.171.60.72
+; docker-from-reposetory ansible_user=ubuntu ansible_host=51.21.128.85
+# first run with ubuntu or the default user to create a new admin user, add him to sudoers and copy the ssh key
+# then change the user to the new one and add the rest tasks to the playbook
+docker-from-reposetory ansible_user=admin ansible_host=51.21.128.85
 
