--- a/Assignment_09/ways-to-install-docker/install-docker-from-role/ansible.cfg
+++ b/Assignment_09/ways-to-install-docker/install-docker-from-role/ansible.cfg
@@ -3,6 +3,7 @@ inventory=./inventory.ini
 remote_user=admin
 ask_pass=no
 role_path=/home/Heisenberg/.ansible/roles
+# private_key_file=role-key.pem for ubunut user for initiation
 
 [privilege_escalation]
 become=true
