--- a/Assignment_09/working-area/docker-petclinic/ansible.cfg
+++ b/Assignment_09/working-area/docker-petclinic/ansible.cfg
@@ -1,9 +1,8 @@
 [defaults]
 inventory=./inventory.ini
-# remote_user=
 ask_pass=no
 role_path=./roles
-
+private_key_file=docker-petclinic.pem
     
 [privilege_escalation]
 become=true
