--- a/Assignment_09/working-area/full-petclinic/ansible.cfg
+++ b/Assignment_09/working-area/full-petclinic/ansible.cfg
@@ -2,8 +2,8 @@
 inventory=./inventory.ini
 ask_pass=no
 role_path=./roles
-
-    
+private_key_file=./full-petclinic-2.pem   
+ 
 [privilege_escalation]
 become=true
 become_method=sudo
