--- a/Assignment_09/ways-to-install-docker/install-docker-from-script/ansible.cfg
+++ b/Assignment_09/ways-to-install-docker/install-docker-from-script/ansible.cfg
@@ -1,10 +1,11 @@
 [defaults]
-inventory = ./inventory.ini
-remote_user = admin 
-ask_pass = false 
+inventory=./inventory.ini
+remote_user=admin 
+ask_pass=no 
+private_key=ansible-key.pem
 
 [privilege_escalation]
-become = true
-become_method = sudo
-become_user = root
-become_ask_pass = false
+become=true
+become_method=sudo
+become_user=root
+become_ask_pass=false
