--- a/Assignment_09/ways-to-install-docker/install-docker-from-script/inventory.ini
+++ b/Assignment_09/ways-to-install-docker/install-docker-from-script/inventory.ini
@@ -1,2 +1,2 @@
 [aws]
-managed-node-1 ansible_host=13.50.5.79 # ansible_ssh_private_key_file=./ansible-key.pem
+managed-node-1 ansible_user=admin ansible_host=16.171.232.146  
