--- a/Assignment_09/working-area/full-petclinic/inventory.ini
+++ b/Assignment_09/working-area/full-petclinic/inventory.ini
@@ -1,3 +1,3 @@
 [aws]
-production-1 ansible_user=ubuntu ansible_host=3.80.187.80 ansible_ssh_private_key_file=./full-petclinic-2.pem
-; production-2 ansible_user=ubuntu ansible_host=107.22.5.52 ansible_ssh_private_key_file=./full-petclinic-2.pem
+full-petclinic-1 ansible_user=ubuntu ansible_host=52.90.94.169 
+full-petclinic-2 ansible_user=ubuntu ansible_host=3.91.229.87
