--- a/Assignment_09/working-area/full-petclinic/playbook.yaml
+++ b/Assignment_09/working-area/full-petclinic/playbook.yaml
@@ -1,7 +1,5 @@
-- name: isntall docker from ansible role for ubuntu
+- name: isntall docker from ansible role
   hosts: all
   roles:
     - geerlingguy.docker
-    - resources-up
     - deploy-petclinic-app
-    
