--- a/Assignment_11/working-area/nexus/docker-compose.nexus.yaml
+++ b/Assignment_11/working-area/nexus/docker-compose.nexus.yaml
@@ -12,7 +12,7 @@ services:
         - nexus-data:/nexus-data
       networks:
         - nexus-net 
-      restart: unless-stopped
+      restart: always
 
 networks:
   nexus-net: {}
